docs: expose swagger UI
